fixed bug - scrollbar mobile
bug que aparecia uma scroll bar principal e uma scrollbar no nav das versões mobile foi consertado. Agora é somente uma scrollbar para a página inteira

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -112,7 +112,7 @@ aside img {
 
   body {
     grid-template-columns: 1fr;
-    grid-template-rows: 0.2fr 0.8fr;
+    /*grid-template-rows: 0.2fr 0.8fr;*/
     grid-template-areas: 
     "profile"
     "timeline";
@@ -121,10 +121,6 @@ aside img {
   #navegador {
     border: none;
     padding: 32px 12px;
-  }
-
-  nav {
-    overflow-y: visible;
-    padding: 22px;
+    overflow-y: unset;
   }
 }
